--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -11,9 +11,10 @@
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a [routerLink]="['/']">Home</a></li>
+        <li><a [routerLink]="['/home']">Home</a></li>
         <li><a [routerLink]="['/simplebind']">Simplebind</a></li>
         <li><a [routerLink]="['/todolist']">Todolist</a></li>
+        <li><a (click)="logout()">Logout</a></li>
       </ul>
     </div>
   </div>
