Added product planner.

--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -14,6 +14,7 @@
         <li><a [routerLink]="['/home']">Home</a></li>
         <li><a [routerLink]="['/simplebind']">Simplebind</a></li>
         <li><a [routerLink]="['/todolist']">Todolist</a></li>
+		<li><a [routerLink]="['/product-planner']">Product Planner</a></li>
         <li><a (click)="logout()">Logout</a></li>
       </ul>
     </div>
