--- a/src/app/customerDetail/customerDetail.html
+++ b/src/app/customerDetail/customerDetail.html
@@ -1,7 +1,8 @@
 <div class="marginTop10">
+	<div class="row">
 	<span class="col-xs-3 FLeft"><a (click)="back()"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a></span>
 	<span class="col-xs-6 Center Bold">Customer Details</span>
-	<br/>
+</div>
 	<hr class="Center" />
 </div>
 
