--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="panel-body">
 		<h4>Welcome to Angular 2 Starter!</h4>
-		<img width="140" height="100" src="assets/images/ng2.jpg" alt="Ng2">
+		<img width="140" height="100" src="assets/images/ng2.png" alt="Ng2">
 	</div>
 
 	<p-growl [value]="msgs"></p-growl>
@@ -40,7 +40,7 @@
 	completely legitimate. </p-accordionTab> </p-accordion>
 
 	<p-dataTable [value]="users" selectionMode="single"
-		[(selection)]="selectedUser" 
+		[(selection)]="selectedUser"
 		[paginator]="true" rows="15" [responsive]="true"> <header>CRUD
 		for Users</header> <p-column field="id" header="ID" [sortable]="true"></p-column>
 	<p-column field="name" header="Name" [sortable]="true"></p-column> <p-column
