--- a/src/app/customerDetail/customerDetail.html
+++ b/src/app/customerDetail/customerDetail.html
@@ -1,8 +1,8 @@
 <div class="marginTop10">
 	<div class="row">
-	<span class="col-xs-3 FLeft"><a (click)="back()"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a></span>
-	<span class="col-xs-6 Center Bold">Customer Details</span>
-</div>
+		<span class="col-xs-3 FLeft"><a (click)="back()"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a></span>
+		<span class="col-xs-6 Center Bold">Customer Details</span>
+	</div>
 	<hr class="Center" />
 </div>
 
@@ -24,4 +24,18 @@
 
 <div class="row padding10">
 	<button class="FRight" id="Plan" style="width: 50%; max-width: 200px" pButton type="button" (click)="login()" icon="fa-pencil" label="Workout a plan"></button>
+</div>
+
+<div class="row marginTop10">
+	<div class="col-xs-12 Bold">
+		Current plan details
+	</div>
+</div>
+<hr class="Center" />
+<div *ngFor="let p of products">
+	<div class="row">
+			<div class="col-xs-8">{{p.name}} <br/> <span style="font-size: 90%;">{{p.description}}</span></div>
+			<div class="col-xs-4" style="text-align: right;">{{p.price}}</div>
+	</div>
+	<hr class="Center" />
 </div>
