--- a/src/app/product-planner/product-planner.css
+++ b/src/app/product-planner/product-planner.css
@@ -20,3 +20,17 @@ h4 {
 .bold {
 	font-weight: bold;
 }
+
+.dynamicColumn{
+    width:auto;
+    overflow:hidden;
+	height:30px;
+	vertical-align;top;
+}
+
+.staticColumn40 {
+    width:100px;
+    float:right;
+	height:30px;
+	vertical-align;top;
+}
