--- a/src/app/product-planner/product-planner.html
+++ b/src/app/product-planner/product-planner.html
@@ -1,23 +1,21 @@
 <div class="container">
-	<h1>Customers Plans</h1>
+	<h1>Customers Plan</h1>
 	
-	<div *ngFor="let plan of plans">
-		<div class="row">
-			<div class="col-xs-8"><h2>{{plan.name}}</h2><br/> <span style="font-size: 90%;">A plan for the customer</span></div>
-			<div class="col-xs-4" style="text-align: right;">Total price</div>
-		</div>
-		<div *ngFor="let product of products">
-			<div class="container2" *ngIf="product.planName == plan.name">
-				<span class="col-xs-8" class="dynamicColumn" [class.bold]="product.selected == 'true'">{{product.name}}</span>
-				
-				<span class="col-xs-8" class="staticColumn40" *ngIf="product.selected == 'true'">
-					<button id="AddProduct" style="width: 60%; max-width: 40px" pButton type="button" (click)="deSelect(product)" label="-"></button>
-				</span>
-				
-				<span class="col-xs-8" class="staticColumn40" *ngIf="product.selected == 'false'">
-					<button id="RemoveProduct" style="width: 60%; max-width: 40px" pButton type="button" (click)="select(product)" label="+"></button>
-				</span>
+	<p-accordion>
+		<p-accordionTab *ngFor="let category of categories" header="{{category.name}}">
+			<div *ngFor="let product of products">
+				<div *ngIf="product.categoryId == category.id" class="row" style="margin-top:10px;">
+					<div class="col-xs-8" [class.bold]="product.count > 0">{{product.name}} <br/> <span style="font-size: 90%;"> </span></div>
+					<div style="text-align: right;">
+						<button id="AddProduct" style="max-width: 25px" pButton type="button" (click)="deSelect(product)" label="-"></button>
+						{{product.count}}
+						<button id="RemoveProduct" style="max-width: 25px" pButton type="button" (click)="select(product)" label="+"></button>
+					</div>
+				</div>
 			</div>
-		</div>
-	</div>
+			<div class="row">
+				<div class="col-xs-4" style="text-align: right;">Total price</div>
+			</div>
+		</p-accordionTab>
+	</p-accordion>
 </div>
