--- a/src/app/product-planner/product-planner.html
+++ b/src/app/product-planner/product-planner.html
@@ -13,9 +13,9 @@
 					</div>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-xs-4" style="text-align: right;">Total price</div>
-			</div>
 		</p-accordionTab>
 	</p-accordion>
+	<div class="row" style="margin-top:10px;">
+		<div style="text-align: right;">Total price: {{totalPrice}}</div>
+	</div>
 </div>
