Show initial earnings, planned earnings and difference.

--- a/src/app/product-planner/product-planner.html
+++ b/src/app/product-planner/product-planner.html
@@ -16,6 +16,8 @@
 		</p-accordionTab>
 	</p-accordion>
 	<div class="row" style="margin-top:10px;">
-		<div style="text-align: right;">Total price: {{totalPrice}}</div>
+		<div style="text-align: right;">Initial earnings: {{initialPrice}}</div>
+		<div style="text-align: right;">Planned earnings: {{plannedPrice}}</div>
+		<div style="text-align: right;">Difference: {{plannedPrice - initialPrice}}</div>
 	</div>
 </div>
