--- a/src/app/customers/customers.html
+++ b/src/app/customers/customers.html
@@ -3,12 +3,17 @@
 		<span class="col-xs-3 FLeft"><!--a (click)="back()"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a--></span>
 		<span class="col-xs-6 Center Bold">Know your customers</span>
 	</div>
-	<hr class="Center" />
+	<br/>
 </div>
+<div class="row" style="padding: -15px;font-size: 90%; color: gray;">
+	<span class="col-xs-8">Customer Subscription</span>
+	<span class="col-xs-4"  style="text-align: center;">Revenue</span>
+</div>
+<hr class="Center" style="margin-top: 0px;"/>
 <div class="">
 	<div *ngFor="let customer of customers" (click)="viewCustomer(customer)">
 		<span class="customerName">{{customer.name}}</span>
-		<span class="revenue">{{customer.revenue}}</span>
+		<span class="revenue"><span style="font-size: 60%;">$</span>{{customer.revenue}}</span>
 		<span [class.red]="customer.expiry < 60" class="row">Expires in {{customer.expiry}} days</span>
 		<br/>
 		<hr class="Center" />
