--- a/src/app/product-planner/product-planner.css
+++ b/src/app/product-planner/product-planner.css
@@ -21,16 +21,7 @@ h4 {
 	font-weight: bold;
 }
 
-.dynamicColumn{
-    width:auto;
-    overflow:hidden;
-	height:30px;
-	vertical-align;top;
-}
-
-.staticColumn40 {
-    width:100px;
-    float:right;
-	height:30px;
-	vertical-align;top;
+.miniButton span {
+	padding:3px;
+	margin;0px;
 }
