--- a/src/app/product-planner/product-planner.html
+++ b/src/app/product-planner/product-planner.html
@@ -7,11 +7,11 @@
 				<div *ngIf="product.categoryId == category.id" class="row" style="margin-top:10px;">
 					<div class="col-xs-8" [class.bold]="product.count > 0">{{product.name}} <br/> <span style="font-size: 90%;"> </span></div>
 					<div style="text-align: right;">
-						<p-commandLink (click)="deSelect(product)"><md-icon class="md-24">-</md-icon></p-commandLink>
+						<p-commandLink (click)="deSelect(product)"><span class="miniButtonRed">-</span></p-commandLink>
 						
 						{{product.count}}
 						
-						<p-commandLink (click)="select(product)"><md-icon class="md-24">+</md-icon></p-commandLink>
+						<p-commandLink (click)="select(product)"><span class="miniButtonGreen">+</span></p-commandLink>
 					</div>
 				</div>
 			</div>
