--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,10 +1,10 @@
 <div class="login">
 	<div class="row"><img style="    max-width: 250px;    max-height: 200px;" src="assets/images/ng2.png" alt="Cheetah"></div>
 	<div class="row marginTop10">
-		<input id="in" type="text" size="30" pInputText [(ngModel)]="name" placeholder="User Name" />
+		<input id="username" type="text" placeholder="Username" size="30" pInputText [(ngModel)]="name" />
 	</div>
 	<div class="row marginTop10">
-		<input type="text" size="30" pPassword [(ngModel)]="password" placeholder="Password" />
+		<input id="password" size="30" pInputText type="password" [(ngModel)]="password" placeholder="Password"/>
 	</div>
 	<div class="row marginTop10">
 		<button id="Login" pButton type="button" (click)="login()" icon="fa-sign-in" label="Log in"></button>
