--- a/src/app/customers/customers.html
+++ b/src/app/customers/customers.html
@@ -1,10 +1,8 @@
-<div class="marginTop10">
-	<div class="row">
-		<span class="col-xs-3 FLeft"><!--a (click)="back()"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a--></span>
-		<span class="col-xs-6 Center Bold">Know your customers</span>
-	</div>
-	<br/>
+<div class="row">
+	<span class="col-xs-12 Center FontBold">Know your Customers</span>
+	<div class="SeparatorFull" style="border-color: darkgray;"></div>
 </div>
+
 <div class="row" style="padding: -15px;font-size: 90%; color: gray;">
 	<span class="col-xs-8">Customer Subscription</span>
 	<span class="col-xs-4"  style="text-align: center;">Revenue</span>
